RESOLVED FIXED235823
(REGRESSION)[IFC][RTL] wpt/css/css-text/white-space/trailing-space-and-text-alignment-rtl-003.html
https://bugs.webkit.org/show_bug.cgi?id=235823
Summary (REGRESSION)[IFC][RTL] wpt/css/css-text/white-space/trailing-space-and-text-a...
alan
Reported 2022-01-28 08:24:58 PST
fails with IFC
Attachments
test reduction (179 bytes, text/html)
2022-01-28 08:31 PST, alan
no flags
Patch (4.34 KB, patch)
2022-01-28 09:37 PST, alan
no flags
Patch (8.34 KB, patch)
2022-01-29 14:49 PST, alan
no flags
Patch (11.77 KB, patch)
2022-01-29 17:51 PST, alan
no flags
Patch (16.04 KB, patch)
2022-01-29 20:00 PST, alan
no flags
Patch (16.04 KB, patch)
2022-01-30 07:24 PST, alan
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2022-01-28 08:25:19 PST
alan
Comment 2 2022-01-28 08:31:45 PST
Created attachment 450234 [details] test reduction
alan
Comment 3 2022-01-28 09:37:53 PST
alan
Comment 4 2022-01-29 14:49:50 PST
alan
Comment 5 2022-01-29 15:30:56 PST
Comment on attachment 450340 [details] Patch This may be making a bit too many runs. Let's just detach the trailing run if needed.
alan
Comment 6 2022-01-29 17:51:37 PST
alan
Comment 7 2022-01-29 20:00:23 PST
Antti Koivisto
Comment 8 2022-01-30 07:15:10 PST
Comment on attachment 450347 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=450347&action=review > Source/WebCore/ChangeLog:18 > + <div stye="width: 2ch; direction: rtl">AB C</div> > + and > + <div stye="direction: rtl">AB </div> style=
alan
Comment 9 2022-01-30 07:24:58 PST
EWS
Comment 10 2022-01-30 08:12:31 PST
Committed r288801 (246577@main): <https://commits.webkit.org/246577@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450359 [details].
Note You need to log in before you can comment on or make changes to this bug.